--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.27.0",
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.2",
     "@types/node": "^22.15.19",
     "eslint": "^9.27.0",
@@ -20,6 +21,7 @@
     "typescript-eslint": "^8.32.1"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0"
   }
 }
